2010-08-08  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/config-module.awk: Add newlines to divide blocks
	in generated modules.mk and improve readability.

2010-08-08  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Create .DOCSTRINGS quietly and avoid screen clutter
	during build.

2010-08-08  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Run do_subst macro quietly without cluttering screen 
	during build.

2010-08-08  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc
	(base_graphics_backend::print_figure): Add a redraw to get the
	thing going.

2010-08-05  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl2ps-renderer.cc (draw): Add support for more terminal types.
	* DLD-FUNCTIONS/fltk_backend.cc: Likewise.

2010-08-04  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_number (const char *)): Create empty string if
	given NULL arg  (bug #30639).  Create 0x0 string array if given
	an empty string argument, not 1x0.

2010-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-str-str.cc: Fix assignment operator.
	* OPERATORS/op-str-s.cc: Likewise.
	* OPERATORS/op-str-m.cc: Likewise.

2010-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov-fcn-handle.cc 
	(octave_value::subsref (..., const std::list<octave_lvalue> *)
	octave_value::do_multi_index_op (..., const std::list<octave_lvalue> *)): 
	New methods. Move code here.
	* ov-fcn-handle.h: Declare them.

2010-08-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov-usr-fcn.cc (Fis_ignored_output): Rename to Fisargout. Change the
	behavior to indicate not ignored outputs.

2010-08-01  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/amd.cc, DLD-FUNCTIONS/balance.cc, 
	DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/betainc.cc,
	DLD-FUNCTIONS/ccolamd.cc, DLD-FUNCTIONS/cellfun.cc,
 	DLD-FUNCTIONS/chol.cc, DLD-FUNCTIONS/colamd.cc, DLD-FUNCTIONS/daspk.cc,
	DLD-FUNCTIONS/dasrt.cc, DLD-FUNCTIONS/dot.cc, DLD-FUNCTIONS/eigs.cc,
	DLD-FUNCTIONS/fftw.cc, DLD-FUNCTIONS/filter.cc,